src/objects/peer__Notification__c.object
<CustomObject>
    <fields>
        <fullName>peer__Account__c</fullName>
        <description>account to which the notification belongs to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>peer__AdminOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check if this is an admin only message</description>
        <label>AdminOnly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Archeived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Archeived</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>peer__Message__c</fullName>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>peer__Notification_Category__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification Category</label>
        <referenceTo>peer__Notification_Category__c</referenceTo>
        <relationshipLabel>Notifications</relationshipLabel>
        <relationshipName>Notifications</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>peer__Priority__c</fullName>
        <description>Priority denoting the the record prioriry over other notification records. 1 denotes the highest priority</description>
        <label>Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>peer__ReadDate__c</fullName>
        <description>when the notification was read</description>
        <label>ReadDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>peer__Send_Type__c</fullName>
        <label>Send Type</label>
        <picklist>
            <picklistValues>
                <fullName>Push</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>peer__Severiority__c</fullName>
        <label>Severiority</label>
        <picklist>
            <picklistValues>
                <fullName>Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alarm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Critical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Notification</label>
    <nameField>
        <label>Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>